--- a/Frontend/uitour-app/src/locales/en.json
+++ b/Frontend/uitour-app/src/locales/en.json
@@ -38,6 +38,7 @@
   },
   "profile": {
     "profile": "Profile",
+    "myProfile": "My profile",
     "account": "Account",
     "trips": "Trips",
     "wishlist": "Wishlist",
@@ -49,7 +50,65 @@
     "becomeAHostTitle": "Become a Host",
     "becomeAHostSubtitle": "Getting started hosting and earning extra income is easy.",
     "aboutTheHost": "About the host",
-    "findSupportHost": "Find support host"
+    "findSupportHost": "Find support host",
+    "about": "About",
+    "pastTrips": "Past trips",
+    "connections": "Connections",
+    "loadingInformation": "Loading information...",
+    "user": "User",
+    "host": "Host",
+    "admin": "Admin",
+    "guest": "Guest",
+    "completeYourProfile": "Complete your profile",
+    "profileDescription": "Your UiTour profile is an important part of every booking. Complete your profile to help guests and other hosts understand more about you.",
+    "edit": "Edit",
+    "getStarted": "Get started",
+    "aboutSection": "About",
+    "noIntroductionYet": "You haven't written an introduction yet.",
+    "personalInformation": "Personal information",
+    "age": "Age",
+    "gender": "Gender",
+    "nationality": "Nationality",
+    "notUpdated": "Not updated",
+    "myInterests": "My interests",
+    "loadingTrips": "Loading trips...",
+    "unableToLoadTrips": "Unable to load trips list",
+    "noTripsYet": "After your first trip, you'll find your past bookings here.",
+    "bookATrip": "Book a trip",
+    "experience": "Experience",
+    "stay": "Stay",
+    "guests": "guests",
+    "viewDetails": "View details",
+    "bookAnotherTrip": "Book another trip",
+    "connectionsDescription": "When you join an experience or invite someone to a trip, you'll find profiles of other guests here.",
+    "noSchedule": "No schedule",
+    "confirmed": "Confirmed",
+    "completed": "Completed",
+    "cancelled": "Cancelled",
+    "pending": "Pending",
+    "unableToLoadUserInfo": "Unable to load user information.",
+    "introduceYourself": "Introduce yourself",
+    "writeInterestingContent": "Write interesting and impressive content",
+    "placesIVisited": "Places I visited",
+    "show": "Show",
+    "delete": "Delete",
+    "addPlaceVisited": "Add place visited",
+    "displayName": "Display name",
+    "selectGender": "-- Select gender --",
+    "male": "Male",
+    "female": "Female",
+    "other": "Other",
+    "nationalityPlaceholder": "e.g., Vietnam",
+    "agePlaceholder": "e.g., 21",
+    "addInterest": "Add interest",
+    "loadingProfile": "Loading profile...",
+    "missingLoginInfo": "Missing login information. Please log in again.",
+    "unableToLoadProfile": "Unable to load profile",
+    "saving": "Saving...",
+    "done": "Done",
+    "cancel": "Cancel",
+    "failedToSaveProfile": "Failed to save profile",
+    "missingLoginInfoEdit": "Missing login information. Please log in again."
   },
   "accountSettings": {
     "title": "Account settings",
@@ -167,7 +226,50 @@
     "typeAMessage": "Type a message",
     "justNow": "Just now",
     "today": "Today",
-    "yesterday": "Yesterday"
+    "yesterday": "Yesterday",
+    "openHostNavigationMenu": "Open host navigation menu",
+    "hostNavigationMenu": "Host navigation menu",
+    "deleteItem": "Delete"
+  },
+  "search": {
+    "where": "Where",
+    "when": "When",
+    "who": "Who",
+    "startYourSearch": "Start your search...",
+    "searchDestinations": "Search destinations",
+    "searchDestinationsPlaceholder": "Search destinations...",
+    "addDates": "Add dates",
+    "addGuests": "Add guests",
+    "guest": "guest",
+    "guests": "guests",
+    "whereTo": "Where to?",
+    "popularDestinations": "Popular destinations",
+    "allDestinations": "All destinations",
+    "noDestinationsFound": "No destinations found",
+    "trySearchingDifferentLocation": "Try searching for a different location",
+    "whosComing": "Who's coming?",
+    "adults": "Adults",
+    "children": "Children",
+    "infants": "Infants",
+    "pets": "Pets",
+    "ages13OrAbove": "Ages 13 or above",
+    "ages2To12": "Ages 2-12",
+    "under2": "Under 2",
+    "bringingServiceAnimal": "Bringing a service animal?",
+    "total": "Total",
+    "selectDates": "Select dates",
+    "dates": "Dates",
+    "months": "Months",
+    "flexible": "Flexible",
+    "clearDates": "Clear dates",
+    "monthSelectionComingSoon": "Month selection coming soon",
+    "exactDates": "Exact dates",
+    "searchByRegion": "Search by region",
+    "guestsSelector": "Guests selector",
+    "languageAndCurrency": "Language and Currency",
+    "today": "Today",
+    "tomorrow": "Tomorrow",
+    "thisWeekend": "This weekend"
   }
 }
 
