--- a/Frontend/uitour-app/src/locales/vi.json
+++ b/Frontend/uitour-app/src/locales/vi.json
@@ -38,6 +38,7 @@
   },
   "profile": {
     "profile": "Hồ sơ",
+    "myProfile": "Hồ sơ của tôi",
     "account": "Tài khoản",
     "trips": "Chuyến đi",
     "wishlist": "Danh sách yêu thích",
@@ -49,7 +50,65 @@
     "becomeAHostTitle": "Trở thành Chủ nhà",
     "becomeAHostSubtitle": "Bắt đầu cho thuê và kiếm thêm thu nhập rất dễ dàng.",
     "aboutTheHost": "Về chủ nhà",
-    "findSupportHost": "Tìm chủ nhà hỗ trợ"
+    "findSupportHost": "Tìm chủ nhà hỗ trợ",
+    "about": "Giới thiệu",
+    "pastTrips": "Chuyến đi trước đây",
+    "connections": "Kết nối",
+    "loadingInformation": "Đang tải thông tin...",
+    "user": "Người dùng",
+    "host": "Chủ nhà",
+    "admin": "Quản trị",
+    "guest": "Khách",
+    "completeYourProfile": "Hoàn tất hồ sơ của bạn",
+    "profileDescription": "Hồ sơ UiTour của bạn là một phần quan trọng của mỗi đặt chỗ. Hoàn tất hồ sơ để giúp khách và các chủ nhà khác hiểu thêm về bạn.",
+    "edit": "Chỉnh sửa",
+    "getStarted": "Bắt đầu",
+    "aboutSection": "Giới thiệu",
+    "noIntroductionYet": "Bạn chưa viết phần giới thiệu.",
+    "personalInformation": "Thông tin cá nhân",
+    "age": "Tuổi",
+    "gender": "Giới tính",
+    "nationality": "Quốc tịch",
+    "notUpdated": "Chưa cập nhật",
+    "myInterests": "Sở thích của tôi",
+    "loadingTrips": "Đang tải chuyến đi...",
+    "unableToLoadTrips": "Không thể tải danh sách chuyến đi",
+    "noTripsYet": "Sau chuyến đi đầu tiên, bạn sẽ tìm thấy các đặt chỗ trước đây của mình ở đây.",
+    "bookATrip": "Đặt chuyến đi",
+    "experience": "Trải nghiệm",
+    "stay": "Chỗ ở",
+    "guests": "khách",
+    "viewDetails": "Xem chi tiết",
+    "bookAnotherTrip": "Đặt chuyến đi khác",
+    "connectionsDescription": "Khi bạn tham gia trải nghiệm hoặc mời ai đó tham gia chuyến đi, bạn sẽ tìm thấy hồ sơ của những khách khác ở đây.",
+    "noSchedule": "Không có lịch trình",
+    "confirmed": "Đã xác nhận",
+    "completed": "Hoàn thành",
+    "cancelled": "Đã hủy",
+    "pending": "Đang chờ",
+    "unableToLoadUserInfo": "Không thể tải thông tin người dùng.",
+    "introduceYourself": "Giới thiệu bản thân",
+    "writeInterestingContent": "Viết nội dung thú vị và ấn tượng",
+    "placesIVisited": "Nơi tôi từng đến",
+    "show": "Hiển thị",
+    "delete": "Xóa",
+    "addPlaceVisited": "Thêm nơi đã đến",
+    "displayName": "Tên hiển thị",
+    "selectGender": "-- Chọn giới tính --",
+    "male": "Nam",
+    "female": "Nữ",
+    "other": "Khác",
+    "nationalityPlaceholder": "VD: Việt Nam",
+    "agePlaceholder": "VD: 21",
+    "addInterest": "Thêm sở thích",
+    "loadingProfile": "Đang tải hồ sơ...",
+    "missingLoginInfo": "Thiếu thông tin đăng nhập. Vui lòng đăng nhập lại.",
+    "unableToLoadProfile": "Không thể tải hồ sơ",
+    "saving": "Đang lưu...",
+    "done": "Hoàn tất",
+    "cancel": "Hủy",
+    "failedToSaveProfile": "Không thể lưu hồ sơ",
+    "missingLoginInfoEdit": "Thiếu thông tin đăng nhập. Vui lòng đăng nhập lại."
   },
   "accountSettings": {
     "title": "Cài đặt tài khoản",
@@ -167,7 +226,50 @@
     "typeAMessage": "Nhập tin nhắn",
     "justNow": "Vừa xong",
     "today": "Hôm nay",
-    "yesterday": "Hôm qua"
+    "yesterday": "Hôm qua",
+    "openHostNavigationMenu": "Mở menu điều hướng chủ nhà",
+    "hostNavigationMenu": "Menu điều hướng chủ nhà",
+    "deleteItem": "Xóa"
+  },
+  "search": {
+    "where": "Ở đâu",
+    "when": "Khi nào",
+    "who": "Ai",
+    "startYourSearch": "Bắt đầu tìm kiếm...",
+    "searchDestinations": "Tìm kiếm điểm đến",
+    "searchDestinationsPlaceholder": "Tìm kiếm điểm đến...",
+    "addDates": "Thêm ngày",
+    "addGuests": "Thêm khách",
+    "guest": "khách",
+    "guests": "khách",
+    "whereTo": "Đi đâu?",
+    "popularDestinations": "Điểm đến phổ biến",
+    "allDestinations": "Tất cả điểm đến",
+    "noDestinationsFound": "Không tìm thấy điểm đến",
+    "trySearchingDifferentLocation": "Thử tìm kiếm một địa điểm khác",
+    "whosComing": "Ai sẽ đến?",
+    "adults": "Người lớn",
+    "children": "Trẻ em",
+    "infants": "Trẻ sơ sinh",
+    "pets": "Thú cưng",
+    "ages13OrAbove": "Từ 13 tuổi trở lên",
+    "ages2To12": "Từ 2-12 tuổi",
+    "under2": "Dưới 2 tuổi",
+    "bringingServiceAnimal": "Mang theo động vật hỗ trợ?",
+    "total": "Tổng",
+    "selectDates": "Chọn ngày",
+    "dates": "Ngày",
+    "months": "Tháng",
+    "flexible": "Linh hoạt",
+    "clearDates": "Xóa ngày",
+    "monthSelectionComingSoon": "Lựa chọn tháng sắp có",
+    "exactDates": "Ngày chính xác",
+    "searchByRegion": "Tìm kiếm theo khu vực",
+    "guestsSelector": "Chọn khách",
+    "languageAndCurrency": "Ngôn ngữ & Tiền tệ",
+    "today": "Hôm nay",
+    "tomorrow": "Ngày mai",
+    "thisWeekend": "Cuối tuần này"
   }
 }
 
