fix trang thai tao phong, tour va anh trips

--- a/Frontend/uitour-app/src/locales/en.json
+++ b/Frontend/uitour-app/src/locales/en.json
@@ -209,6 +209,7 @@
     "noListingsYet": "You don't have any listings yet. Create a new listing to get started!",
     "listed": "Listed",
     "pending": "Pending",
+    "approved": "Approved",
     "stay": "Stay",
     "tour": "Tour",
     "confirmDeletion": "Confirm Deletion",
