--- a/Frontend/uitour-app/src/locales/vi.json
+++ b/Frontend/uitour-app/src/locales/vi.json
@@ -209,6 +209,7 @@
     "noListingsYet": "Bạn chưa có danh sách nào. Tạo danh sách mới để bắt đầu!",
     "listed": "Đã liệt kê",
     "pending": "Đang chờ",
+    "approved": "Đã duyệt",
     "stay": "Chỗ ở",
     "tour": "Tour",
     "confirmDeletion": "Xác nhận xóa",
