them chuc nang cho man hinh today

--- a/Frontend/uitour-app/src/locales/en.json
+++ b/Frontend/uitour-app/src/locales/en.json
@@ -196,12 +196,22 @@
     "tryAgain": "Try again",
     "noBookingsYet": "You have no bookings yet.",
     "bookingsWillAppear": "Bookings will appear here when guests book your property/tour.",
+    "noCheckInsToday": "No check-ins today.",
+    "guestsCheckingInToday": "Guests checking in today will appear here.",
     "upcoming": "Upcoming",
     "staying": "Staying",
     "checkInToday": "Check-in today",
     "completed": "Completed",
     "guestName": "Guest name",
     "stayDuration": "Stay duration",
+    "night": "night",
+    "nights": "nights",
+    "paymentStatus": "Payment status",
+    "paid": "Paid",
+    "pending": "Pending payment",
+    "failed": "Payment failed",
+    "refunded": "Refunded",
+    "noPayment": "No payment",
     "yourListings": "Your listings",
     "publishNewStay": "Publish a new stay or update an existing one.",
     "createNewListing": "Create new listing",
