--- a/Frontend/uitour-app/src/locales/vi.json
+++ b/Frontend/uitour-app/src/locales/vi.json
@@ -196,12 +196,22 @@
     "tryAgain": "Thử lại",
     "noBookingsYet": "Bạn chưa có đặt chỗ nào.",
     "bookingsWillAppear": "Đặt chỗ sẽ xuất hiện ở đây khi khách đặt chỗ tại tài sản/tour của bạn.",
+    "noCheckInsToday": "Không có khách nhận phòng hôm nay.",
+    "guestsCheckingInToday": "Khách nhận phòng hôm nay sẽ hiển thị ở đây.",
     "upcoming": "Sắp tới",
     "staying": "Đang ở",
     "checkInToday": "Nhận phòng hôm nay",
     "completed": "Hoàn thành",
     "guestName": "Tên khách",
     "stayDuration": "Thời gian ở",
+    "night": "đêm",
+    "nights": "đêm",
+    "paymentStatus": "Trạng thái thanh toán",
+    "paid": "Đã thanh toán",
+    "pending": "Chờ thanh toán",
+    "failed": "Thanh toán thất bại",
+    "refunded": "Đã hoàn tiền",
+    "noPayment": "Chưa thanh toán",
     "yourListings": "Danh sách của bạn",
     "publishNewStay": "Xuất bản chỗ ở mới hoặc cập nhật chỗ ở hiện có.",
     "createNewListing": "Tạo danh sách mới",
