--- a/Frontend/uitour-app/src/locales/en.json
+++ b/Frontend/uitour-app/src/locales/en.json
@@ -322,6 +322,140 @@
     "loadingPaymentDetails": "Loading payment details...",
     "bookingIdNotFound": "Booking ID not found",
     "failedToConfirmTransfer": "Failed to confirm transfer. Please try again."
+  },
+  "hostExperience": {
+    "choose": {
+      "title": "What experience will you offer guests?",
+      "categories": {
+        "art": "Art and design",
+        "fitness": "Fitness and wellness",
+        "food": "Food and drink",
+        "history": "History and culture",
+        "nature": "Nature and outdoors"
+      }
+    },
+    "discount": {
+      "title": "Add discounts",
+      "earlyBirdTitle": "Early bird discount",
+      "earlyBirdSubtitle": "Applies to bookings made 2+ weeks early",
+      "discountByDays": "Discount by days booked early",
+      "discountByGroups": "Discount by group size",
+      "addEarlyBooking": "Add early-booking discount",
+      "addEarlyBookingSubtitle": "Give a discount for booking early",
+      "addGroupDiscount": "Add group discount",
+      "addGroupDiscountSubtitle": "Give discount for large groups",
+      "modalTitleDays": "Add early-booking discount",
+      "modalTitleGroup": "Add group discount",
+      "labelPercent": "Discount percent (%)",
+      "labelMinDays": "Minimum days before booking",
+      "labelMinGroup": "Minimum group size",
+      "save": "Save",
+      "cancel": "Cancel",
+      "errorPercent": "Percent must be between 1–100",
+      "errorDays": "Days must be between 1 and 365",
+      "errorGroupMin": "Group size must be at least 2",
+      "errorGroupMax": "Group size cannot exceed max guests",
+      "errorDuplicateDays": "A discount for booking ≥ {{value}} days already exists",
+      "errorDuplicateGroup": "A discount for group size ≥ {{value}} guests already exists",
+      "daysItemTitle": "Bookings made ≥ {{value}} days early",
+      "groupItemTitle": "Groups of ≥ {{value}} guests"
+    },
+    "itinerary": {
+      "title": "Your itinerary",
+      "photoWarning": "Warning: Photos are stored temporarily. Reloading or leaving before publishing will cause them to be lost.",
+      "addActivity": "Add Activity",
+      "activityTitlePlaceholder": "Activity title",
+      "activityContentPlaceholder": "Activity details",
+      "modalDeleteTitle": "Delete activity",
+      "modalDeleteContent": "Are you sure you want to delete this activity?",
+      "delete": "Delete",
+      "errNoActivities": "Please add at least one activity",
+      "saved": "Saved",
+      "deleted": "Activity deleted",
+      "cannotRead": "Cannot read file",
+      "needTitleDetail": "Please provide title and details"
+    },
+    "location": {
+      "title": "Where’s your experience located?",
+      "searchPlaceholder": "Move the map to select a location",
+      "useCurrent": "📍 Use current location",
+      "locating": "Locating...",
+      "gpsNotSupported": "Your browser does not support GPS.",
+      "gpsDenied": "Cannot access your location."
+    },
+    "maxGuests": {
+      "title": "Pick a time, duration and number of guests",
+      "startTime": "Start time",
+      "capacityPricing": "Capacity & pricing",
+      "maxGuests": "Max guests",
+      "durationHours": "Duration (hours)",
+      "durationHint": "Duration must be between 1–24",
+      "pricePerGuestUSD": "Price per guest (USD)",
+      "pricePerGuestVND": "Price per guest (VND)",
+      "enterPrice": "Enter price...",
+      "enterDuration": "Enter duration..."
+    },
+    "qualification": {
+      "title": "Share your qualifications",
+      "intro": "Introduction",
+      "expertise": "Expertise",
+      "recognition": "Recognition",
+      "editDetails": "Add details",
+      "writeHere": "Write here...",
+      "close": "Close",
+      "addDetails": "Add details",
+      "save": "Save",
+      "cancel": "Cancel"
+    },
+    "years": {
+      "title": "How many years have you worked in?",
+      "increase": "Increase",
+      "decrease": "Decrease"
+    },
+    "describe": {
+      "title": "Describe your experience",
+      "titleLabel": "Title",
+      "contentLabel": "Content",
+      "titlePlaceholder": "Write here...",
+      "summaryPlaceholder": "Something about your experience..."
+    },
+    "preview": {
+      "basicInfo": "Basic information",
+      "category": "Category",
+      "yearsOfExperience": "Years of experience",
+      "years": "years",
+      "description": "Description",
+      "qualifications": "Qualifications",
+      "location": "Location",
+      "address": "Address",
+      "city": "City",
+      "country": "Country",
+      "pricing": "Pricing",
+      "basePrice": "Base price",
+      "currency": "Currency",
+      "pricePer": "Price per",
+      "capacity": "Guest capacity",
+      "maxGuests": "Maximum guests",
+      "timeSlots": "Available time slots",
+      "noTimeSlots": "No time slots added",
+      "itinerary": "Experience itinerary",
+      "noActivities": "No activities added",
+      "photos": "Photos"
+    },
+    "categories": {
+      "fitness": "Fitness / Gym",
+      "cooking": "Cooking",
+      "crafting": "Crafting",
+      "adventure": "Adventure",
+      "art": "Art & Creativity"
+    },
+    "photos": {
+      "loading": "Loading your photos...",
+      "title": "Add photos that showcase your skills",
+      "warningTitle": "Warning:",
+      "warningMessage": " Photos are stored temporarily. Reloading or leaving the hosting setup before publishing will cause them to be lost.",
+      "addPhotos": "Add photos",
+      "coverTag": "Cover"
+    }
   }
 }
-
